--- a/assets/index.html
+++ b/assets/index.html
@@ -12,7 +12,67 @@
 
 <body>
     <!-- #header -->
-<header></header>
+<header id="mdHeader" class="mdHeader">
+    <div id="mdHeader_wrap" class="mdHeader_wrap">
+        <div class="mdHeader_inner">
+            <div class="mdHeader_nav_block">
+                <div class="mdHeader_logo">
+                    <p>
+                        <a href="./index.html">
+                            <img src="./images/logo.png" alt="misterdonut 55th anniversary">
+                        </a>
+                    </p>
+                </div>
+                <div class="mdHeader_gNav">
+                    <div class="mdHeader_gNav_list">
+                        <ul>
+                            <li class="gNav_menu" date-hgnav="m_menu">
+                                <a href="">
+                                    <span class="icon">
+                                        <img src="./images/m_menu.png" alt="商品情報">
+                                        <!-- <img src="" alt="商品情報" class="actImg"> -->
+                                    </span>
+                                    <span class="txt">商品情報</span>
+                                </a>
+                            </li>
+                            <li class="gNav_enjoy" date-hgnav="enjoy">
+                                <a href="">
+                                    <span class="icon">
+                                        <img src="./images/enjoy.png" alt="エンジョイmisdo">
+                                        <!-- <img src="" alt="エンジョイmisdo" class="actImg"> -->
+                                    </span>
+                                    <span class="txt">エンジョイmisdo</span>
+                                </a>
+                            </li>
+                            <li class="gNav_about" date-hgnav="torikumi">
+                                <a href="">
+                                    <span class="icon">
+                                        <img src="./images/torikumi.png" alt="私たちの取り組み">
+                                        <!-- <img src="" alt="私たちの取り組み" class="actImg"> -->
+                                    </span>
+                                    <span class="txt">私たちの取り組み</span>
+                                </a>
+                            </li>
+                            <li class="gNav_shop" date-hgnav="shop">
+                                <a href="" target="_blank">
+                                    <span class="icon">
+                                        <img src="./images/shop.png" alt="ショップ検索">
+                                        <!-- <img src="" alt="ショップ検索" class="actImg"> -->
+                                    </span>
+                                    <span class="txt">ショップ検索</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+            <div class="mdHeader_menu_block"></div>
+            <div class="mdHeader_menu_btn"></div>
+        </div>
+    </div>
+
+</header>
     <!-- /#header -->
 
     <!-- #main -->
